# aqua-mcp

./: .gitignore  AGENTS.md  PUBLISHING.md  README.md  prompt_test_read_only.md  prompt_test_send_real_lbtc.md  promt_test_read_only.md  promt_test_send_real_btc.md  promt_test_send_real_lbtc.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
scripts/: cli_smoke_send_btc.py  cli_smoke_send_lbtc.py  publish.sh
src/aqua/: __init__.py  ankara.py  assets.py  banner.py  bitcoin.py  boltz.py  changelly.py  lightning.py  lnurl.py  pix.py  server.py  sideshift.py  sideswap.py  storage.py  tools.py  wallet.py
src/aqua/cli/: btc.py  changelly.py  commands.py  liquid.py  main.py  password.py  serve.py  sideshift.py  sideswap.py  wallet.py
src/aqua_mcp/: __init__.py  ankara.py  assets.py  bitcoin.py  boltz.py  lightning.py  server.py  storage.py  tools.py  wallet.py
src/aqua_mcp/cli/: __init__.py  btc.py  commands.py  lightning.py  liquid.py  main.py  output.py  password.py  serve.py  wallet.py
src/liquid_wallet/: __init__.py  assets.py  server.py  storage.py  tools.py  wallet.py
tests/: __init__.py  conftest.py  test_ankara.py  test_assets.py  test_bitcoin.py  test_boltz.py  test_changelly.py  test_cli.py  test_lightning.py  test_lnurl.py  test_pix.py  test_server.py  test_sideshift.py  test_sideswap.py  test_storage.py  test_tools.py  test_tools_lightning.py
tests/smoke/: test_cli_read_only.py  test_cli_smoke.py
