[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquid-wallet"
version = "0.1.0"
description = "MCP server for Liquid Network wallet operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andy", email = "andy@example.com" }
]
keywords = ["liquid", "bitcoin", "wallet", "mcp", "ai", "lwk", "blockstream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "lwk>=0.8.0",
    "mcp>=1.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
liquid-wallet = "liquid_wallet.server:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/liquid-wallet"
Repository = "https://github.com/YOUR_USERNAME/liquid-wallet"
Documentation = "https://github.com/YOUR_USERNAME/liquid-wallet#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/liquid_wallet"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
