[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-aqua"
dynamic = ["version"]
description = "Agentic AQUA — MCP server for Liquid Network and Bitcoin wallet operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Andy", email = "andy@example.com" }
]
keywords = ["liquid", "bitcoin", "wallet", "mcp", "ai", "lwk", "blockstream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "lwk>=0.8.0",
    "mcp>=1.0.0",
    "cryptography>=42.0.0",
    "bdkpython>=2.2.0",
    "coincurve>=21.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
aqua = "aqua.cli.main:cli"
aqua-mcp = "aqua.server:main"
agentic-aqua = "aqua.server:main"

[project.urls]
Homepage = "https://github.com/jan3dev/agentic-aqua"
Repository = "https://github.com/jan3dev/agentic-aqua"
Documentation = "https://github.com/jan3dev/agentic-aqua#readme"

[tool.hatch.version]
path = "src/aqua/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aqua"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
